[Issue 3] Completed porting of UnitTest functionality to telemetry.